Create the output directory in the dependency rule instead of depending on it to prevent recreating it every time. Thanks to amiconn for clarifying the issue.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21534 a1c6a512-1295-4272-9138-f99709370657

--- a/tools/rbspeex/Makefile
+++ b/tools/rbspeex/Makefile
@@ -45,7 +45,10 @@ DIRS =
 
 all: ../rbspeexenc ../rbspeexdec
 
-$(DEPFILE): $(SOURCES) $(OUT)
+$(DEPFILE): $(SOURCES)
+	@echo MKDIR build$(RBARCH)
+	$(SILENT)mkdir -p build$(RBARCH)
+	@echo Creating dependencies
 	$(SILENT)rm -f $(DEPFILE)
 	$(SILENT)(for each in $(SOURCES) x; do \
 	    if test "x" != "$$each"; then \
