meizu_dfu: 1) add check on existance of file to be flashed 2) enable compiler warnings in Makefile 3) fix compiler warning about htonl (etc.)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21538 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/meizu_dfu/Makefile
+++ b/utils/meizu_dfu/Makefile
@@ -1,8 +1,9 @@
+CFLAGS = -W -Wall
+LDFLAGS = -lusb
 
 all: meizu_dfu
 
 meizu_dfu: meizu_dfu.c
-	gcc -o meizu_dfu meizu_dfu.c -lusb
 
 .PHONY: clean
 clean:
