Patch by Wincent Balin: convert pdbox from app to viewer
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21815 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -16,7 +16,7 @@ sgb,viewers/rockboy,6
 m3u,viewers/iriverify,-
 mid,viewers/midi,7
 rmi,viewers/midi,7
-pd,apps/pdbox,2
+pd,viewers/pdbox,2
 rsp,viewers/searchengine,8
 sok,games/sokoban,1
 pgn,games/chessbox,1
