Add some Makefile rules to demonstrate assembling, linking, converting to binary file and finally converting to a notes .htm file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21845 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/ipod/bin2note/Makefile
+++ b/utils/ipod/bin2note/Makefile
@@ -12,5 +12,17 @@ all: bin2note
 bin2note: bin2note.c
 	gcc -W -Wall -o bin2note bin2note.c
 
+test.htm: bin2note test.bin
+	./bin2note test.bin test.htm
+
+test.o: test.S
+	arm-elf-as -o $@ $<
+
+test.elf: test.o
+	arm-elf-ld -e 0 -Ttext=0 -o $@ $<
+
+test.bin: test.elf
+	arm-elf-objcopy -O binary $< $@
+
 clean:
-	rm -f bin2note
+	rm -f bin2note test.o test.elf test.bin test.htm
