Add a png viewer plugin
Author: Christophe Gouiran
Flyspray: FS#9493


git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22037 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -5,6 +5,7 @@ txt,apps/text_editor,2
 jpg,viewers/jpeg,2
 jpe,viewers/jpeg,2
 jpeg,viewers/jpeg,2
+png,viewers/png,2
 ucl,viewers/rockbox_flash,3
 rvf,viewers/video,4
 mp3,viewers/vbrfix,5
