hopefully fix the wpseditor... I cant get it to compile on a pre r22062 tree so dunno if this is enough to get it going again
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22063 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/wpseditor/libwps/Makefile
+++ b/utils/wpseditor/libwps/Makefile
@@ -55,9 +55,11 @@ SOURCES= \
         src/lcd.c \
         src/proxy.c \
         $(ROOT)/apps/gui/scrollbar.c \
-        $(ROOT)/apps/gui/gwps-common.c \
-        $(ROOT)/apps/gui/wps_parser.c \
-        $(ROOT)/apps/gui/wps_debug.c \
+        $(ROOT)/apps/gui/music_screen.c \
+	$(ROOT)/apps/gui/wps_engine/wps_display.c \
+	$(ROOT)/apps/gui/wps_engine/wps_tokens.c \
+        $(ROOT)/apps/gui/wps_engine/wps_parser.c \
+        $(ROOT)/apps/gui/wps_parser/wps_debug.c \
         $(ROOT)/apps/recorder/peakmeter.c \
         $(ROOT)/apps/recorder/icons.c \
         $(ROOT)/apps/misc.c \
