Fix building of the database utility.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22166 a1c6a512-1295-4272-9138-f99709370657

--- a/tools/database/Makefile
+++ b/tools/database/Makefile
@@ -13,8 +13,9 @@ SRC = database.o tagcache.o replaygain.o \
 	metadata.o metadata_common.o mp3data.o \
 	a52.o mp3.o adx.o mp4.o aiff.o mpc.o ape.o ogg.o \
 	asap.o sid.o asf.o spc.o flac.o vorbis.o wave.o \
-	mod.o wavpack.o monkeys.o \
-	logf.o unicode.o ctype.o structec.o crc32.o io.o misc.o
+	mod.o wavpack.o monkeys.o rm.o \
+	logf.o unicode.o ctype.o structec.o crc32.o io.o \
+	misc.o strlcpy.o fixedpoint.o
 
 OBJ = $(SRC:.c=.o)
 
