Move download link pattern description to rbutil.ini.
Don't hard code the creation of the download links anymore but use pattern replacement and define the basic structure in rbutil.ini.

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22200 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -1,7 +1,7 @@
 [general]
-release_url=http://download.rockbox.org/release/
-daily_url=http://download.rockbox.org/daily/
-bleeding_url=http://build.rockbox.org/dist/build-
+release_url=http://download.rockbox.org/release/%RELVERSION%/rockbox-%MODEL%-%RELVERSION%.zip
+daily_url=http://download.rockbox.org/daily/%MODEL%/rockbox-%MODEL%.zip
+bleeding_url=http://build.rockbox.org/data/rockbox-%MODEL%.zip
 server_conf_url=http://www.rockbox.org/daily/build-info
 bootloader_info_url=http://download.rockbox.org/bootloader/bootloaders-info
 bleeding_info=http://build.rockbox.org/cvsmod/build-info
