Extend bootloader installation to accept alternatives for the destination filename.
Remove the hardcoded special case for the H10 bootloader installation and uninstallation. Allow multiple bootloader filenames to be present and pick the existing one on (un)installation. This is also needed for easily adding support for the Samsung YH players (to make FS#10373 actually work).

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22220 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -192,7 +192,7 @@ name="H10 (5 / 6GB) UMS"
 buildserver_modelname=h10_5gb
 bootloadermethod=mi4
 bootloadername=/iriver/H10.mi4
-bootloaderfile=/System/H10.mi4
+bootloaderfile=/System/H10.mi4, /System/H10EMP.mi4
 resolution=128x128x16
 manualname=
 brand=Iriver
@@ -206,7 +206,7 @@ name="H10 (5 / 6GB) MTP"
 buildserver_modelname=h10_5gb
 bootloadermethod=mi4
 bootloadername=/iriver/H10_5GB-MTP/H10.mi4
-bootloaderfile=/System/H10.mi4
+bootloaderfile=/System/H10.mi4, /System/H10EMP.mi4
 resolution=128x128x16
 manualname=
 brand=Iriver
