Add (untested) support for Samsung YH-820, YH-920 and YH-925. Based on FS#10373 with adjustments to match the recent changes.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22231 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -45,6 +45,9 @@ platform33=iaudiom3
 platform40=gigabeatf
 platform50=sansae200
 platform51=sansac200
+platform57=smsgyh820
+platform58=smsgyh920
+platform59=smsgyh925
 platform60=mrobe100
 
 
@@ -450,6 +453,48 @@ brand=Olympus
 usbid=0x07b40280
 configure_modelname=mrobe100
 targetid=33
+encoder=rbspeex
+
+[smsgyh820]
+name="YH-820"
+buildserver_modelname=yh820
+bootloadermethod=mi4
+bootloadername=/samsung/FW_YH820.mi4
+bootloaderfile=/SYSTEM/FW_YH820.mi4
+resolution=128x96x16
+manualname=
+brand=Samsung
+usbid=0x04e85023
+configure_modelname=yh820
+targetid=57
+encoder=rbspeex
+
+[smsgyh920]
+name="YH-920"
+buildserver_modelname=yh920
+bootloadermethod=mi4
+bootloadername=/samsung/PP5020.mi4
+bootloaderfile=/SYSTEM/FW_YH920.mi4, /SYSTEM/PP5020.mi4
+resolution=160x128x2
+manualname=
+brand=Samsung
+usbid=0x04e85022, 0x04e8501d
+configure_modelname=yh920
+targetid=58
+encoder=rbspeex
+
+[smsgyh925]
+name="YH-925"
+buildserver_modelname=yh925
+bootloadermethod=mi4
+bootloadername=/samsung/FW_YH925.mi4
+bootloaderfile=/SYSTEM/FW_YH925.mi4
+resolution=160x128x16
+manualname=
+brand=Samsung
+usbid=0x04e85024
+configure_modelname=yh925
+targetid=59
 encoder=rbspeex
 
 [languages]
