rbutil: add ams sansa targets. (FS#10185)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22317 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -45,11 +45,14 @@ platform33=iaudiom3
 platform40=gigabeatf
 platform50=sansae200
 platform51=sansac200
-platform57=smsgyh820
-platform58=smsgyh920
-platform59=smsgyh925
+platform52=sansae200v2
+platform53=sansafuze
+platform54=sansam200v4
+platform55=sansaclip
 platform60=mrobe100
-
+platform70=smsgyh820
+platform71=smsgyh920
+platform72=smsgyh925
 
 
 [player]
@@ -440,6 +443,67 @@ usbid=0x07817450, 0x07817451
 configure_modelname=c200
 targetid=30
 encoder=rbspeex
+
+[sansae200v2]
+name="Sansa e200v2 series"
+buildserver_modelname=sansae200v2
+bootloadermethod=ams
+bootloadername=/sandisk-sansa/e200v2/bootloader-e200v2.sansa
+bootloaderfile=/e200pa.bin
+resolution=176x220x16
+manualname=
+brand=Sandisk
+usbid=0x078174c1
+usberror=0x07810722
+configure_modelname=e200v2
+targetid=51
+encoder=rbspeex
+
+[sansafuze]
+name="Sansa Fuze"
+buildserver_modelname=sansafuze
+bootloadermethod=ams
+bootloadername=/sandisk-sansa/fuze/bootloader-fuze.sansa
+bootloaderfile=/fuzea.bin
+resolution=220x176x16
+manualname=
+brand=Sandisk
+usbid=0x07817423
+usberror=0x078174c0
+configure_modelname=fuze
+targetid=53
+encoder=rbspeex
+
+[sansam200v4]
+name="Sansa m200v4"
+buildserver_modelname=sansam200v4
+bootloadermethod=ams
+bootloadername=/sandisk-sansa/m200v4/bootloader-m200v4.sansa
+bootloaderfile=/m200a.bin
+resolution=128x64x1
+manualname=
+brand=Sandisk
+usbid=
+usberror=
+configure_modelname=m200v4
+targetid=52
+encoder=rbspeex
+
+[sansaclip]
+name="Sansa Clip"
+buildserver_modelname=sansaclip
+bootloadermethod=ams
+bootloadername=/sandisk-sansa/clip/bootloader-clip.sansa
+bootloaderfile=/m300a.bin
+resolution=128x64x1
+manualname=
+brand=Sandisk
+usbid=0x07817433
+usberror=0x07817432
+configure_modelname=clip
+targetid=50
+encoder=rbspeex
+
 
 [mrobe100]
 name="m:robe100"
