--- a/rbutil/mkamsboot/Makefile
+++ b/rbutil/mkamsboot/Makefile
@@ -22,30 +22,54 @@ endif
 
 CC?= gcc
 
+ifdef RBARCH
+CFLAGS += -arch $(RBARCH)
+endif
+
+OUT = build$(RBARCH)
+
 all: $(OUTPUT)
 
 $(LIBUCL):
 	make -C ../../tools/ucl/src libucl.a
 
 # This file can be generated in the dualboot/ directory
-dualboot.o: dualboot.c
-	$(CC) $(CFLAGS) -c -o dualboot.o dualboot.c
+$(OUT)/dualboot.o: dualboot.c
+	$(CC) $(CFLAGS) -c -o $(OUT)/dualboot.o dualboot.c
 
-md5.o: md5.c md5.h
-	$(CC) $(CFLAGS) -c -o md5.o -W -Wall md5.c
+$(OUT)/md5.o: md5.c md5.h
+	$(CC) $(CFLAGS) -c -o $(OUT)/md5.o -W -Wall md5.c
 
-mkamsboot.o: mkamsboot.c dualboot.h md5.h
-	$(CC) $(CFLAGS) -c -o mkamsboot.o -W -Wall mkamsboot.c -DVERSION=\"$(APPVERSION)\"
+$(OUT)/mkamsboot.o: mkamsboot.c dualboot.h md5.h
+	$(CC) $(CFLAGS) -c -o $(OUT)/mkamsboot.o -W -Wall mkamsboot.c -DVERSION=\"$(APPVERSION)\"
 
-$(OUTPUT): mkamsboot.o md5.o dualboot.o $(LIBUCL)
-	$(CC) $(CFLAGS) -o $(OUTPUT) mkamsboot.o md5.o dualboot.o $(LIBUCL)
+$(OUTPUT):  $(OUT) $(OUT)/mkamsboot.o $(OUT)/md5.o $(OUT)/dualboot.o $(LIBUCL)
+	$(CC) $(CFLAGS) -o $(OUTPUT) $(OUT)/mkamsboot.o $(OUT)/md5.o $(OUT)/dualboot.o $(LIBUCL)
 
-libmkamsboot.o: mkamsboot.c dualboot.h md5.h
-	$(CC) $(CFLAGS) -DLIB -c -o libmkamsboot.o -W -Wall mkamsboot.c
+$(OUT)/libmkamsboot.o: mkamsboot.c dualboot.h md5.h
+	$(CC) $(CFLAGS) -DLIB -c -o $(OUT)/libmkamsboot.o -W -Wall mkamsboot.c
 
-libmkamsboot.a: libmkamsboot.o md5.o dualboot.o
-	$(AR) ruv libmkamsboot.a libmkamsboot.o md5.o dualboot.o
+libmkamsboot$(RBARCH).a: $(OUT) $(OUT)/libmkamsboot.o $(OUT)/md5.o $(OUT)/dualboot.o
+	$(AR) ruv libmkamsboot$(RBARCH).a $(OUT)/libmkamsboot.o $(OUT)/md5.o $(OUT)/dualboot.o
 
+# some trickery to build ppc and i386 from a single call
+ifeq ($(RBARCH),)
+libmkamsbooti386.a:
+	make RBARCH=i386 libmkamsbooti386.a
+
+libmkamsbootppc.a:
+	make RBARCH=ppc libmkamsbootppc.a
+endif    
+    
+libmkamsboot-universal: libmkamsbooti386.a libmkamsbootppc.a
+	@echo lipo libmkamsboot.a
+	$(SILENT) rm -f libmkamsboot.a
+	lipo -create libmkamsbootppc.a libmkamsbooti386.a -output libmkamsboot.a    
+    
 clean:
-	rm -f $(OUTPUT) mkamsboot.o *~ md5.o dualboot.o \
-	libmkamsboot.o libmkamsboot.a
+	rm -f $(OUTPUT) libmkamsboot.o libmkamsboot*.a
+	rm -rf build*
+    
+build$(RBARCH):
+	@echo MKDIR build$(RBARCH)
+	$(SILENT)mkdir build$(RBARCH)    
