Make libucl Makefile more silent.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22325 a1c6a512-1295-4272-9138-f99709370657

--- a/tools/ucl/src/Makefile
+++ b/tools/ucl/src/Makefile
@@ -8,6 +8,10 @@
 #
 CFLAGS = -I../include
 
+ifndef V
+SILENT = @
+endif
+
 ifdef RBARCH
 CFLAGS += -arch $(RBARCH)
 endif
@@ -52,4 +56,5 @@ clean:
 
 build$(RBARCH):
 	@echo MKDIR build$(RBARCH)
-	$(SILENT)mkdir build$(RBARCH)    
+	$(SILENT)mkdir build$(RBARCH)
+
