Improve notification about unsupported players.
- Display the name of a detected unsupported player when running autodetection from the configuration window.
- Extend the list of known-unsupported players.

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22334 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -251,7 +251,6 @@ bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodnano.ipod
 manualname=
 brand=Apple
-usbincompat=0x05ac1260, 0x05ac1262, 0x05ac1263
 configure_modelname=ipodnano
 targetid=14
 encoder=rbspeex
@@ -286,7 +285,6 @@ bootloadername=/ipod/bootloader-ipodvideo.ipod
 manualname=
 brand=Apple
 configure_modelname=ipodvideo
-usbincompat=0x05ac1261
 targetid=15
 encoder=rbspeex
 
@@ -521,6 +519,79 @@ usbid=0x04e85024
 configure_modelname=yh925
 targetid=59
 encoder=rbspeex
+
+[05ac1260]
+name=Apple Ipod Nano (Second Generation)
+
+[05ac1240]
+name=Apple Ipod Nano (Second Generation, DFU Mode)
+
+[05ac1262]
+name=Apple Ipod Nano (Third Generation)
+
+[05ac1263]
+name=Apple Ipod Nano (Fourth Generation)
+
+[05ac1255]
+name=Apple Ipod Nano (Fourth Generation, DFU Mode)
+
+[05ac1261]
+name=Apple Ipod Classic (6th Generation)
+
+[041e4133]
+name=Creative Zen series (Removable Disk Mode)
+
+[041e4151]
+name=Creative Zen Vision:M (MTP)
+
+[041e4150]
+name=Creative Zen V (MTP)
+
+[041e4152]
+name=Creative Zen V Plus (MTP)
+
+[066f3600]
+name=Creative Zen V (HW recovery mode)
+
+[041e4157]
+name=Creative ZEN (MTP)
+
+[041e4128]
+name=Creative NOMAD Jukebox Zen Xtra (MTP)
+
+[041e4111]
+name=Dell Digital Jukebox (First Generation, MTP)
+
+[041e412f]
+name=Dell Digital Jukebox (Second Generation, MTP)
+
+[09300014]
+name=Toshiba Gigabeat V Series, MTP
+
+[09300019]
+name=Toshiba Gigabeat T Series, MTP (No UMS mode)
+
+[07817480]
+name=Sansa Connect (Normal Connection)
+
+[07817481]
+name=Sansa Connect (Recovery Mode)
+
+[07817400]
+name=Sansa m200-tcc (UMS/MSC)
+
+[07817401]
+name=Sansa m200-tcc (MTP)
+
+[07817430]
+name=Sansa m200v4 (MTP)
+
+[07817431]
+name=Sansa m200v4 (MSC)
+
+[078174b1]
+name=Sansa View
+
 
 [languages]
 lang1=afrikaans
