Rockbox Utility: add preliminary support for installing the bootloader (+ dual boot) on ChinaChip targets
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22356 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -43,6 +43,7 @@ platform31=iaudiom5
 platform32=iaudiox5v
 platform33=iaudiom3
 platform40=gigabeatf
+platform44=ondavx747
 platform50=sansae200
 platform51=sansac200
 platform52=sansae200v2
@@ -479,6 +480,19 @@ brand=Olympus
 usbid=0x07b40280
 configure_modelname=mrobe100
 targetid=33
+encoder=rbspeex
+
+[ondavx747]
+name=VX747
+buildserver_modelname=ondavx747
+bootloadermethod=chinachip
+bootloadername=/onda/vx747/ccpmp.bin
+bootloaderfile=/SG301.HXF
+manualname=
+brand=Onda
+usbid=0x07c4a4a5
+configure_modelname=ondavx747
+targetid=44
 encoder=rbspeex
 
 [smsgyh820]
