* Onda VX747/VX767: fix target_id & MODEL_NUMBER * Add support to Rockbox Utility for Onda VX747+ & VX777
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22359 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -44,6 +44,8 @@ platform32=iaudiox5v
 platform33=iaudiom3
 platform40=gigabeatf
 platform44=ondavx747
+platform45=ondavx747p
+platform46=ondavx777
 platform50=sansae200
 platform51=sansac200
 platform52=sansae200v2
@@ -492,7 +494,33 @@ manualname=
 brand=Onda
 usbid=0x07c4a4a5
 configure_modelname=ondavx747
-targetid=44
+targetid=45
+encoder=rbspeex
+
+[ondavx747p]
+name=VX747+
+buildserver_modelname=ondavx747p
+bootloadermethod=chinachip
+bootloadername=/onda/vx747p/ccpmp.bin
+bootloaderfile=/SG301.HXF
+manualname=
+brand=Onda
+usbid=0x07c4a4a5
+configure_modelname=ondavx747p
+targetid=54
+encoder=rbspeex
+
+[ondavx777]
+name=VX777
+buildserver_modelname=ondavx777
+bootloadermethod=chinachip
+bootloadername=/onda/vx777/ccpmp.bin
+bootloaderfile=/VX777.HXF
+manualname=
+brand=Onda
+usbid=0x07c4a4a5
+configure_modelname=ondavx777
+targetid=61
 encoder=rbspeex
 
 [smsgyh820]
