Explicitly set CC to prevent make trying to use cc instead. Fixes build issues on w32.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22623 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/mkamsboot/Makefile
+++ b/rbutil/mkamsboot/Makefile
@@ -1,6 +1,7 @@
 # We use the UCL code available in the Rockbox tools/ directory
 CFLAGS=-I../../tools/ucl/include -Wall
 LIBUCL=../../tools/ucl/src/libucl.a
+CC = gcc
 
 #change for releases
 APPVERSION=`../../tools/version.sh`
