rbutil: correct several name entrys in the rbutil.ini file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22640 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -436,7 +436,6 @@ usberror=0x07817432
 configure_modelname=clip
 encoder=rbspeex
 
-
 [mrobe100]
 name="m:robe100"
 buildserver_modelname=mrobe100
@@ -450,7 +449,7 @@ configure_modelname=mrobe100
 encoder=rbspeex
 
 [ondavx747]
-name=VX747
+name="VX747"
 buildserver_modelname=ondavx747
 bootloadermethod=chinachip
 bootloadername=/onda/vx747/ccpmp.bin
@@ -462,7 +461,7 @@ configure_modelname=ondavx747
 encoder=rbspeex
 
 [ondavx747p]
-name=VX747+
+name="VX747+"
 buildserver_modelname=ondavx747p
 bootloadermethod=chinachip
 bootloadername=/onda/vx747p/ccpmp.bin
@@ -474,7 +473,7 @@ configure_modelname=ondavx747p
 encoder=rbspeex
 
 [ondavx777]
-name=VX777
+name="VX777"
 buildserver_modelname=ondavx777
 bootloadermethod=chinachip
 bootloadername=/onda/vx777/ccpmp.bin
@@ -522,76 +521,70 @@ configure_modelname=yh925
 encoder=rbspeex
 
 [05ac1260]
-name=Apple Ipod Nano (Second Generation)
+name="Apple Ipod Nano (Second Generation)"
 
 [05ac1240]
-name=Apple Ipod Nano (Second Generation, DFU Mode)
+name="Apple Ipod Nano (Second Generation, DFU Mode)"
 
 [05ac1262]
-name=Apple Ipod Nano (Third Generation)
+name="Apple Ipod Nano (Third Generation)"
 
 [05ac1263]
-name=Apple Ipod Nano (Fourth Generation)
+name="Apple Ipod Nano (Fourth Generation)"
 
 [05ac1255]
-name=Apple Ipod Nano (Fourth Generation, DFU Mode)
+name="Apple Ipod Nano (Fourth Generation, DFU Mode)"
 
 [05ac1261]
-name=Apple Ipod Classic (6th Generation)
+name="Apple Ipod Classic (6th Generation)"
 
 [041e4133]
-name=Creative Zen series (Removable Disk Mode)
+name="Creative Zen series (Removable Disk Mode)"
 
 [041e4151]
-name=Creative Zen Vision:M (MTP)
+name="Creative Zen Vision:M (MTP)"
 
 [041e4150]
-name=Creative Zen V (MTP)
+name="Creative Zen V (MTP)"
 
 [041e4152]
-name=Creative Zen V Plus (MTP)
+name="Creative Zen V Plus (MTP)"
 
 [066f3600]
-name=Creative Zen V (HW recovery mode)
+name="Creative Zen V (HW recovery mode)"
 
 [041e4157]
-name=Creative ZEN (MTP)
+name="Creative ZEN (MTP)"
 
 [041e4128]
-name=Creative NOMAD Jukebox Zen Xtra (MTP)
+name="Creative NOMAD Jukebox Zen Xtra (MTP)"
 
 [041e4111]
-name=Dell Digital Jukebox (First Generation, MTP)
+name="Dell Digital Jukebox (First Generation, MTP)"
 
 [041e412f]
-name=Dell Digital Jukebox (Second Generation, MTP)
+name="Dell Digital Jukebox (Second Generation, MTP)"
 
 [09300014]
-name=Toshiba Gigabeat V Series, MTP
+name="Toshiba Gigabeat V Series, MTP"
 
 [09300019]
-name=Toshiba Gigabeat T Series, MTP (No UMS mode)
+name="Toshiba Gigabeat T Series, MTP (No UMS mode)"
 
 [07817480]
-name=Sansa Connect (Normal Connection)
+name="Sansa Connect (Normal Connection)"
 
 [07817481]
-name=Sansa Connect (Recovery Mode)
+name="Sansa Connect (Recovery Mode)"
 
 [07817400]
-name=Sansa m200-tcc (UMS/MSC)
+name="Sansa m200-tcc (UMS/MSC)"
 
 [07817401]
-name=Sansa m200-tcc (MTP)
-
-[07817430]
-name=Sansa m200v4 (MTP)
-
-[07817431]
-name=Sansa m200v4 (MSC)
+name="Sansa m200-tcc (MTP)"
 
 [078174b1]
-name=Sansa View
+name="Sansa View"
 
 
 [languages]
